Added voice image and meaning text

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -6,6 +6,7 @@
         android:icon="@drawable/search_icon"
         android:id="@+id/action_search"
         android:title="Search for a word..."
+        app:queryHint="Search for a word..."
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView"/>
 </menu>
