--- a/app/src/main/res/layout/fragment_homepage.xml
+++ b/app/src/main/res/layout/fragment_homepage.xml
@@ -5,6 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="java.util.List"/>
+        <import type="android.view.View"/>
         <variable
             name="word"
             type="com.eneszeydan.englishdictionary.model.Word" />
@@ -47,6 +49,7 @@
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="16dp"
                     android:text="@{word.phonetic}"
+                    android:textStyle="italic"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/wordName" />
 
@@ -59,8 +62,34 @@
                     android:text="@{word.word}"
                     android:textColor="@color/black"
                     android:textSize="34sp"
+                    android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/meaning"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="8dp"
+                    android:text="@{word.meanings[0].definitions[0].definition}"
+                    android:textColor="@color/black"
+                    android:textSize="16sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/phoneticTV" />
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="34sp"
+                    android:layout_height="34sp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="40dp"
+                    android:visibility="@{word == null ? View.GONE : View.VISIBLE}"
+                    app:layout_constraintStart_toEndOf="@+id/wordName"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/voice" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
