--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="purple_200">#ff0026</color>
     <color name="purple_500">#aa0019</color>
     <color name="purple_700">#55000d</color>
-    <color name="teal_200">#a5ff00</color>
+    <color name="teal_200">#ffffff</color>
     <color name="teal_700">#26ff00</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
